--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -577,6 +577,7 @@ meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
+meta-s = "/input return"
 meta-u = "/window scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
