lots of changes

--- a/abcde.conf
+++ b/abcde.conf
@@ -1,3 +1,7 @@
 FLACOPTS=--best
 ACTIONS=cddb,read,encode,tag,move,clean
 OUTPUTTYPE=flac
+mungefilename ()
+{
+       echo "$@" | sed -e 's/^\.*//' | tr -d ":><|*/\"'?[:cntrl:]"
+}
